--- a/css/style.css
+++ b/css/style.css
@@ -117,7 +117,8 @@ body {
 .play-next {
     background-image: url("https://raw.githubusercontent.com/AlexBoronin/momentum/main/assets/svg/play-next.svg");
 }
-.wrapOption{
+
+.wrapOption {
     display: flex;
     position: fixed;
     width: 200px;
@@ -127,10 +128,11 @@ body {
     right: 250px;
 }
 
-.wrapOption:hover .angle{
+.wrapOption:hover .angle {
     opacity: 50%;
     transition: .6s ease-out;
 }
+
 .angle {
     background-image: url("../assets/img/angle-down-white.png");
     color: transparent;
@@ -184,10 +186,12 @@ body {
     border-left: 1px solid #796767;
     color: #796767;
 }
+
 .optionLanguageBe {
     border-right: 1px solid #796767;
     color: #796767;
 }
+
 .optionLanguageBe:hover {
     background: #1b1b1c;
     border-top-left-radius: 5px;
@@ -212,7 +216,7 @@ body {
     position: relative;
 }
 
-.playLine{
+.playLine {
     background: transparent;
     width: 120px;
     height: 4px;
@@ -254,9 +258,10 @@ body {
     cursor: pointer;
 }
 
-.volume.visible{
+.volume.visible {
     background-image: url("https://raw.githubusercontent.com/AlexBoronin/momentum/main/assets/img/sound-on.png");
 }
+
 .volume.off {
     background-image: url("https://raw.githubusercontent.com/AlexBoronin/momentum/main/assets/img/sound-off.png");
 }
@@ -281,7 +286,7 @@ body {
     position: relative;
 }
 
-.volume-container:hover .change{
+.volume-container:hover .change {
     background: #3d3535;
 }
 
@@ -301,7 +306,7 @@ body {
     left: 72px;
 }
 
-.play-time.visible{
+.play-time.visible {
     color: #f6d1d1;
 }
 
@@ -321,14 +326,17 @@ body {
 .play-list {
     list-style: none;
     margin-top: 5px;
+    position: relative;
+    order: 1;
 }
 
 .play__list__item {
-    cursor: pointer;
-    margin-bottom: 5px;
+    /*margin-bottom: 3px;*/
     vertical-align: middle;
     transition: all .7s linear;
+    cursor: pointer;
 }
+
 .play__list__item.active {
     text-shadow: 0 0 10px white;
     color: #f6d1d1;
@@ -350,7 +358,7 @@ body {
     transition: all .7s linear;
 }
 
-.active::before{
+.active::before {
     display: inline-block;
     content: '';
     width: 12px;
@@ -451,7 +459,7 @@ body {
 .date {
     min-height: 28px;
     font-size: 45px;
-    margin-bottom: 20px;
+    margin: 10px 0 20px;
 }
 
 .greeting-container {
@@ -550,7 +558,7 @@ body {
     min-height: 20px;
 }
 
-.set-btn{
+.set-btn {
     display: block;
     position: fixed;
     bottom: 10px;
@@ -561,7 +569,7 @@ body {
     background-position: center;
     background-size: cover;
     cursor: pointer;
-    transition: all 1s ease-out;
+    transition: all .5s ease-out;
 }
 
 .set-btn.close {
@@ -586,23 +594,24 @@ body {
     transition: all .7s ease-out;
     box-shadow: 0 0 20px 4px rgb(255 255 255 / 80%);
 }
+
 .set.open {
     opacity: 80%;
     transform: translateX(215px);
 }
 
 .setClose {
-    width: 15px;
-    height: 15px;
+    width: 20px;
+    height: 20px;
     display: block;
     position: absolute;
-    right: 15px;
-    bottom: 15px;
+    right: 20px;
+    bottom: 20px;
     background-image: url("../assets/img/angle-down-white.png");
     background-size: 100%;
     background-repeat: no-repeat;
     transform: rotate(90deg);
-    opacity: 70%;
+    opacity: 50%;
     cursor: pointer;
     transition: all .3s ease-out;
     border-radius: 50%;
@@ -614,9 +623,8 @@ body {
 }
 
 .languageEl,
-.apiEl,
+.sourceEL,
 .todoEl {
-    display: inline-block;
     width: 100%;
     padding: 10px 10px;
     text-align: left;
@@ -628,18 +636,19 @@ body {
     cursor: pointer;
 }
 
-.languageEl:hover{
+.languageEl:hover {
     border-top-left-radius: 5px;
     border-top-right-radius: 5px;
     background: #1b1b1c;
     color: white;
 }
 
-.lang-active {
-    background: #2e3035;
+.lang-active,
+.source-active {
+    background: #1b1b1c;
 }
 
-.apiEl:hover,
+.sourceEL:hover,
 .todoEl:hover {
     background: #1b1b1c;
     color: white;
@@ -655,26 +664,12 @@ body {
     transition: all 1s linear;
 }
 
-.lang-opasity {
+.lang-opacity {
     display: grid;
     transition: all 1s ease-out;
 }
 
-.wrapBe {
-    display: flex;
-    border-right: 1px solid #2e3035;
-    color: black;
-    align-items: center;
-    justify-content: center;
-    font-weight: 800;
-    font-size: 18px;
-}
-
-.wrapBe:hover {
-    background: #796767;
-    color: white;
-}
-
+.wrapBe,
 .wrapEn {
     display: flex;
     border-right: 1px solid #2e3035;
@@ -685,11 +680,69 @@ body {
     font-size: 18px;
 }
 
+.wrapBe:hover,
 .wrapEn:hover {
     background: #796767;
     color: white;
 }
 
+.wrapSource {
+    position: relative;
+    display: none;
+    grid-template-columns: 1fr 1fr 1fr;
+    justify-content: center;
+    height: 30px;
+    background: #f8e2e2;
+    transition: all 1s linear;
+}
+
+.gits,
+.unsplash,
+.flickr {
+    display: flex;
+    color: black;
+    align-items: center;
+    justify-content: center;
+    font-weight: 800;
+    font-size: 18px;
+}
+
+.gits {
+    border-right: 1px solid #2e3035;
+}
+
+.unsplash {
+    border-right: 1px solid #2e3035;
+    border-left: 1px solid #2e3035;
+}
+
+.flickr {
+    border-left: 1px solid #2e3035;
+}
+
+.gits:hover,
+.unsplash:hover,
+.flickr:hover {
+    background: #796767;
+    color: white;
+}
+
+
+/*const wrapSource = document.createElement('div');*/
+/*wrapSource.classList.add('wrap-source');*/
+/*document.querySelector('.set').append(wrapSource);*/
+/*const git = document.createElement('div');*/
+/*git.classList.add('git');*/
+/*document.querySelector('.wrapSource').append(git);*/
+/*git.textContent = 'GIT';*/
+/*const unsplash = document.createElement('div');*/
+/*unsplash.classList.add('unsplash');*/
+/*document.querySelector('.wrapSource').append(unsplash);*/
+/*unsplash.textContent = 'Unsplash';*/
+/*const flickr = document.createElement('div');*/
+/*flickr.classList.add('flickr');*/
+/*document.querySelector('.wrapSource').append(flickr);*/
+/*flickr.textContent = 'Flickr';*/
 
 @media (max-width: 768px) {
     .time {
